Bug #357
closedfix license on strptime.c
100%
Description
I contacted the original copyright holder of strptime.c, about updating his 4 clause license to reflect modern times (and eliminate the conflict in clauses 3 and 4), and got a very helpful reply. We should update the license per the permission given. Here's the original message authorizing this:
Thank you for contacting me. The strptime.c routine has been
relicensed for several years. The new license is the modern FreeBSD
2-clause license. I will append the 2-clause header license. If this
is a problem for your project, please let me know and I'm sure we can
find a suitable license.
The 4-clause BSD license was the primary non-GPL open-source license at
the time I wrote the code, which is why it contained clauses 3 and 4.
The early releases of the code permitted redistribution "without
modification," not "with or without modification," forcing changes back
upstream to me. Requests for receiving bugfixes and changes were
commonplace in the '80s-'90s, and strengthened the function's
compatibility on the diverse UNIX variants of the time. That time has
passed, and I wish anyone well who can make use of the code with no
further obligation to me. (I changed the license long ago to conform to
the old BSD license and allow anyone to freely modify the code, so I'm
not sure why that e-mail message was prepended. No need to prepend this
one, either ...)
Enjoy,
Kevin Ruddy
Powerdog Industries
/*
* Copyright (c) 1994 Powerdog Industries. All rights reserved.
*
* Redistribution and use in source and binary forms, with or without
* modification, are permitted provided that the following conditions
* are met:
*
* 1. Redistributions of source code must retain the above copyright
* notice, this list of conditions and the following disclaimer.
*
* 2. Redistributions in binary form must reproduce the above copyright
* notice, this list of conditions and the following disclaimer
* in the documentation and/or other materials provided with the
* distribution.
*
* THIS SOFTWARE IS PROVIDED BY POWERDOG INDUSTRIES ``AS IS'' AND ANY
* EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
* IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
* PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE POWERDOG INDUSTRIES BE
* LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
* CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
* SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
* BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
* WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
* OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
* EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*
* The views and conclusions contained in the software and documentation
* are those of the authors and should not be interpreted as representing
* official policies, either expressed or implied, of Powerdog Industries.
*/
On 9/17/2010 7:22 PM, Garrett D'Amore wrote:
I have imported your strptime implementation into illumos
(www.illumos.org -- which is a community derivative of Solaris).I had to make various modifications so that it would conform to the same
ABI that Solaris provides.Anyway, the reason I'm contacting you is with respect to the license.
The 4-clause BSD license you supplied is a bit unfortunate ... clause 3
(the "advertising" clause) is in conflict with clause 4. All of the
BSD's have taken the approach of removing clause 3 (some have also
removed clause 4) following the lead of UC Berkeley itself.Can I please have permission to remove clause 3?
Btw, if you would like to relicense this back to us using the CDDL,
which provides copyleft-like provisions, but limits it to the scope of
the files, you might find that better suits your original goal of being
able to get changes back in source form. We are very CDDL friendly,
unlike BSD.I'd also like to remove the "request for feedback" mail message from the
file -- nothing seems to explicitly require it in the license, but it
seems only polite to ask your permission before I do so.To refresh your mind, here's a pointer to the source in our tree, which
also contains my changes to the file:http://src.illumos.org/source/xref/illumos-opengrok/usr/src/lib/libc/port/locale/strptime.c
Thanks.
- Garrett
Updated by Garrett D'Amore almost 12 years ago
Redmine messed up with the formatting, and I don't see how to fix it. Here's a try at the actual properly formatted license.
/* * Copyright (c) 1994 Powerdog Industries. All rights reserved. * * Redistribution and use in source and binary forms, with or without * modification, are permitted provided that the following conditions * are met: * * 1. Redistributions of source code must retain the above copyright * notice, this list of conditions and the following disclaimer. * * 2. Redistributions in binary form must reproduce the above copyright * notice, this list of conditions and the following disclaimer * in the documentation and/or other materials provided with the * distribution. * * THIS SOFTWARE IS PROVIDED BY POWERDOG INDUSTRIES ``AS IS'' AND ANY * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR * PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE POWERDOG INDUSTRIES BE * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR * BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE * OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, * EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. * * The views and conclusions contained in the software and documentation * are those of the authors and should not be interpreted as representing * official policies, either expressed or implied, of Powerdog Industries. */
Updated by Garrett D'Amore almost 12 years ago
- Status changed from New to Resolved
Fixed in 13222:02526851ba75