357 fix license on strptime.c 358 the prototype CDDL header needs minor grammar fixes Reviewed by: trisk@opensolaris.org Reviewed by: gwr@nexenta.com Reviewed by: gber@openindiana.org